# gokitty

./: CMakeLists.txt  README.md  settings.xml
data/tracks/: etrack.xml  forza.xml  street.xml
inc/: config.h  data_reader.h  exceptions.h  executor.h  hinge_model.h  integration.h  model_element.h  pid_controller.h  torcs_integration.h  util.h  visualisation.h
res/: default_configuration.xml
src/: config.cpp  data_reader.cpp  executor_racing.cpp  executor_recording.cpp  hinge_model.cpp  log.cpp  main.cpp  model_element.cpp  pid_controller.cpp  torcs_integration.cpp  util.cpp  visualisation.cpp
tests/: segment_collisions.cpp
